this command doesn't exist anymore...
[skip ci]

--- a/docs/_layouts/commands.html
+++ b/docs/_layouts/commands.html
@@ -5,7 +5,7 @@
 	<div class="container">
 		<h2>Command List</h2>
 		<p>
-			The default prefix is <code>!</code>, but you can also @mention the bot and use commands that way as well (ex: <code>@spudnik ping</code>).<br />
+			The default prefix is <code>!</code>, but you can also @mention the bot and use commands that way as well (ex: <code>@spudnik help</code>).<br />
 			You can customize the default command prefix, too, just take a look at our <a href="/getting-started">Getting Started Guide</a>
 		</p>
 		{% assign groups = site.data.command_groups | sort %}
