--- a/docs/_layouts/commands.html
+++ b/docs/_layouts/commands.html
@@ -1,7 +1,7 @@
 {% include head.html %}
 {% include nav.html %}
 
-<main style="padding-top:100px;">
+<main>
 	<div class="container">
 		<h2>Command List</h2>
 		<p>
@@ -10,16 +10,15 @@
 		</p>
 		{% assign groups = site.data.command_groups | sort %}
 		{% for group_hash in groups %} {% assign group = group_hash[1] | sort %}
-			{% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
-			<hr class="mb-5">
-			<section class="wow fadeIn">
+			<hr>
+			<section>
 				<h3>
 					<a href="#{{ group_hash[0] }}"></a>
 					{% assign group_title = group_hash[0] | split: '_' %}
 					{% capture group_title %}{% for word in group_title %}{{ word | capitalize }} {% endfor %}{% endcapture %}
 					{{ group_title }}
 				</h3>
-				<table class="table table-bordered {% if thecycle == 'odd' %}table-dark{% endif %}">
+				<table class="striped">
 					<thead>
 						<tr>
 							<th scope="col">Feature</th>
