--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,50 +1,42 @@
 ---
 ---
-@import "https://use.fontawesome.com/releases/v5.0.13/css/all.css";
-@import "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css";
-@import "https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/css/mdb.min.css";
-html,
-body,
-header,
-.view {
-	height: 100%;
-}
 
-@media (max-width: 740px) {
-	html,
-	body,
-	header,
-	.view {
-		height: 1000px;
-	}
-}
-
-@media (min-width: 800px) and (max-width: 850px) {
-	html,
-	body,
-	header,
-	.view {
-		height: 650px;
-	}
-}
-
-@media (min-width: 800px) and (max-width: 850px) {
-	.navbar:not(.top-nav-collapse) {
-		background: #1C2331 !important;
-	}
-}
-
-.cta-home {
-	color: #fff;
-}
-
-footer.page-footer .footer-copyright {
+nav {
 	background-color: #8226B6;
 	background-image: linear-gradient(120deg, #191970, #8226B6);
+	
+	.nav-wrapper {
+		#logo-container {
+			margin-left: 10px;
+		}
+		ul.top-nav {
+			margin-left: 150px;
+		}
+	}
+	.sidenav .user-view img {
+		margin: auto;
+	}
 }
 
-.navbar.scrolling-navbar.top-nav-collapse {
-	background-color: #f6f6f6;
+.btn-large i {
+	font-size: 1.6rem;
+	line-height: inherit;
+}
+
+.patreon-button img {
+	border-radius: 3px;
+	width: 250px;
+}
+
+footer.page-footer {
+	margin-top: 150px;
+	background-color: #8226B6;
+	background-image: linear-gradient(120deg, #191970, #8226B6);
+
+	a {
+		text-decoration: none;
+		color: white;
+	}
 }
 
 #return-to-top {
@@ -89,13 +81,4 @@ footer.page-footer .footer-copyright {
 #return-to-top:hover i {
 	color: #fff;
 	top: 5px;
-}
-
-ul {
-	&.command-usage,
-	{
-		margin: 0;
-		padding: 0;
-		list-style-type: none;
-	}
 }
