nav updates for docs, homepage updates

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -18,6 +18,13 @@ nav {
 	}
 }
 
+.full-page-intro {
+    background-image: url(/assets/img/aurora.jpg);
+    background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center top;
+}
+
 .btn-large i {
 	font-size: 1.6rem;
 	line-height: inherit;
@@ -58,27 +65,27 @@ footer.page-footer {
 	-ms-transition: all 0.3s ease;
 	-o-transition: all 0.3s ease;
 	transition: all 0.3s ease;
-}
 
-#return-to-top i {
-	color: #fff;
-	margin: 0;
-	position: relative;
-	left: 16px;
-	top: 13px;
-	font-size: 19px;
-	-webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	-ms-transition: all 0.3s ease;
-	-o-transition: all 0.3s ease;
-	transition: all 0.3s ease;
-}
+	i {
+		color: #fff;
+		margin: 0;
+		position: relative;
+		left: 16px;
+		top: 13px;
+		font-size: 19px;
+		-webkit-transition: all 0.3s ease;
+		-moz-transition: all 0.3s ease;
+		-ms-transition: all 0.3s ease;
+		-o-transition: all 0.3s ease;
+		transition: all 0.3s ease;
+	}
 
-#return-to-top:hover {
-	background: rgba(0, 0, 0, 0.9);
-}
+	&:hover {
+		background: rgba(0, 0, 0, 0.9);
 
-#return-to-top:hover i {
-	color: #fff;
-	top: 5px;
+		i {
+			color: #fff;
+			top: 5px;
+		}
+	}
 }
