--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -33,7 +33,7 @@
 				<br><br><br><hr>
 				<h3>Found a bug?</h3>
 				<p>Let us know by submitting an issue on GitHub!</p>
-				<a target="_blank" href="https://github.com/Spudnik-Group/Spudnik/issues" class="waves-effect waves-light indigo btn-small"><i class="material-icons left">bug_report</i>GitHub Issues</a>
+				<a target="_blank" href="https://github.com/Spudnik-Group/Spudnik/issues/new/choose" class="waves-effect waves-light indigo btn-small"><i class="material-icons left">bug_report</i>GitHub Issues</a>
 			</div>
 		</div>
 	</section>
@@ -47,7 +47,7 @@
 						<h4 class="center-align"><i class="material-icons indigo-text small">code</i> Contributing To Development:</h5>
 						<p class="grey-text"><strong>Fork. Commit. Pull Request.</strong></p>
 						<p>Take a look at our <a href="https://github.com/orgs/Spudnik-Group/projects/1">Project Board</a></p>
-						<p>Code, commit, and submit a PR! Make sure to look at our <a href="https://github.com/Spudnik-Group/Spudnik/blob/master/CODE_OF_CONDUCT.md">Code of Conduct</a>, too.</p>
+						<p>Code, commit, and submit a PR! Make sure to look at our <a href="https://github.com/Spudnik-Group/Spudnik/blob/master/.github/CODE_OF_CONDUCT.md">Code of Conduct</a>, too.</p>
 					</div>
 				</div>
 			</div>
