--- a/docs/_layouts/getting-started.html
+++ b/docs/_layouts/getting-started.html
@@ -65,7 +65,7 @@
 		<hr>
 		<h4>Adblocker</h4>
 		<p class="grey-text">- Automatically delete any message containing an invite to another Discord server, unless posted by an Administrator.</p>
-		<p>syntax: `!adblock <enable|disable>`</p>
+		<p>syntax: <code>!adblock <enable|disable></code></p>
 		<p>Go ahead and simply enable or disable this feature.</p>
 		<hr>
 		<h4>Starboard</h4>
